--- a/index.Rmd
+++ b/index.Rmd
@@ -1,24 +1,11 @@
-<!DOCTYPE html>
-<html lang="" xml:lang="">
-  <head>
-    <title>Functions</title>
-    <meta charset="utf-8" />
-    <meta name="author" content="Meenakshi Kushwaha" />
-    <script src="index_files/header-attrs-2.3/header-attrs.js"></script>
-    <link href="index_files/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link href="index_files/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
-  </head>
-  <body>
-    <textarea id="source">
-class: center, middle, inverse, title-slide
-
-# Functions
-## Advanced R
-### Meenakshi Kushwaha
-### 2020/09/02 (updated: 2020-09-11)
-
 ---
-
+title: "Functions"
+subtitle: "Advanced R"
+author: "Meenakshi Kushwaha"
+date: "2020/09/02 (updated: `r Sys.Date()`)"
+output:
+  xaringan::moon_reader
+---
 class:middle, center
 # The Basics
 ---
@@ -41,19 +28,18 @@ class:middle, center
 
 ```r 
 typeof(sum)
-#&gt; [1] "builtin"
+#> [1] "builtin"
 typeof(`[`)
-#&gt; [1] "special"
+#> [1] "special"
 ```
 .footnote[The Basics]  
 ---
 # First-class functions
 - R functions are objects in their own right
 - No special syntax for defining and naming a function
-- Create a function object using `function` and bind it to a name with `&lt;-`
+- Create a function object using `function` and bind it to a name with `<-`
 - Binding step is not necessary
-
-```r
+```{r eval=FALSE}
 lapply(mtcars, function(x) length(unique(x)))
 Filter(function(x) !is.numeric(x), mtcars)
 integrate(function(x) sin(x) ^ 2, 0, pi)
@@ -62,11 +48,10 @@ integrate(function(x) sin(x) ^ 2, 0, pi)
 ---
 # Invoking a function
 Use `do.call` if arguments are already in a data structure
-
-```r
-args &lt;- list(1:10, na.rm = TRUE)
+```{r, eval=FALSE}
+args <- list(1:10, na.rm = TRUE)
 do.call(mean, args)
-&gt; [1] 5.5
+> [1] 5.5
 ```
 .footnote[The Basics]  
 ---
@@ -76,14 +61,13 @@ class:middle, center
 ---
 # Nesting
 
-
-```r
-x &lt;- runif(100)
+```{r eval=FALSE}
+x <- runif(100)
 sqrt(mean(square(deviation(x))))
-#&gt; [1] 0.274
+#> [1] 0.274
 ```
 
-`\(\checkmark\)` Concise, well suited for short sequences  
+$\checkmark$ Concise, well suited for short sequences  
 **x**  Can be hard to read
 
 .footnote[Function composition]
@@ -93,33 +77,31 @@ Note- code highlight differs if r is not within parentheses
 ---
 # Intermediate Objects
 
-
-```r
-out &lt;- deviation(x)
-out &lt;- square(out)
-out &lt;- mean(out)
-out &lt;- sqrt(out)
+```{r eval=FALSE}
+out <- deviation(x)
+out <- square(out)
+out <- mean(out)
+out <- sqrt(out)
 out
-#&gt; [1] 0.274
+#> [1] 0.274
 ```
 
 **x**  intermediate names required  
-`\(\checkmark\)` This is useful only when intermediate objects are important  
+$\checkmark$ This is useful only when intermediate objects are important  
 
 .footnote[Function composition]
 ---
 # Piping 
 
-
-```r
-x %&gt;%
-  deviation() %&gt;%
-  square() %&gt;%
-  mean() %&gt;%
+```{r eval=FALSE}  
+x %>%
+  deviation() %>%
+  square() %>%
+  mean() %>%
   sqrt()
-#&gt; [1] 0.274
+#> [1] 0.274
 ```
-`\(\checkmark\)` More readable code  
+$\checkmark$ More readable code  
 **x**  Requires third party package   
 .footnote[Function composition]
 ---
@@ -140,32 +122,30 @@ class: center, middle
 ---
 ## Name masking
 .pull-left[Names defined within the function mask names outside the function 
-
-```r
-x &lt;- 10
-y &lt;- 20
-g02 &lt;- function() {
-  x &lt;- 1
-  y &lt;- 2
+```{r eval=FALSE}
+x <- 10
+y <- 20
+g02 <- function() {
+  x <- 1
+  y <- 2
   c(x, y)
 }
 g02()
-#&gt; [1] 1 2
+#> [1] 1 2
 ```
 ]
 --
 .pull-right[If a name isn’t defined inside a function, R looks one level up.       
-
-```r
-x &lt;- 2
-g03 &lt;- function() {
-  y &lt;- 1
+```{r eval=FALSE}
+x <- 2
+g03 <- function() {
+  y <- 1
   c(x, y)
 }
 g03()
-#&gt; [1] 2 1
+#> [1] 2 1
 y
-#&gt; [1] 20
+#> [1] 20
 ```
 ]     
 
@@ -179,15 +159,14 @@ The same rules apply if a function is defined inside another function.
 
 When you use a name in a function call, R ignores non-function objects when looking for that value.
 
-
-```r
-g09 &lt;- function(x) x + 100
-g10 &lt;- function() {
-  g09 &lt;- 10
+```{r eval=FALSE}
+g09 <- function(x) x + 100
+g10 <- function() {
+  g09 <- 10
   g09(g09)
 }
 g10()
-#&gt; [1] 110
+#> [1] 110
 ```
   
 .footnote[Lexical scoping]
@@ -196,13 +175,12 @@ best to not use same names (caution from Hadley) but knowing this can help us tr
 ---
 # A fresh start
 Every time a function is called a new environment is created to host its execution. 
-
-```r
-g11 &lt;- function() {
+```{r eval=FALSE}
+g11 <- function() {
   if (!exists("a")) {
-    a &lt;- 1
+    a <- 1
   } else {
-    a &lt;- a + 1
+    a <- a + 1
   }
   a
 }
@@ -219,23 +197,21 @@ Each run is independent of other runs
 - R looks for values when the function is run, not when the function is created. 
 
 
-
-```r
-g12 &lt;- function() x + 1
-x &lt;- 15
+```{r eval=FALSE}
+g12 <- function() x + 1
+x <- 15
 g12()
-#&gt; [1] 16
+#> [1] 16
 
-x &lt;- 20
+x <- 20
 g12()
-#&gt; [1] 21
+#> [1] 21
 ```
 
 - If there is a a spelling mistake in the code, you won’t get an error message when you create the function
-
-```r
+```{r eval=FALSE}
 codetools::findGlobals(g12)
-#&gt; [1] "+" "x"
+#> [1] "+" "x"
 ```
 .footnote[Lexical scoping]
 ---
@@ -243,13 +219,12 @@ class: middle, center
 # Lazy evaluation
 In R, function arguments are **lazily evaluated**: they’re only evaluated if accessed.
 .left[
-
-```r
-h01 &lt;- function(x) {
+```{r eval=FALSE}
+h01 <- function(x) {
   10
 }
 h01(stop("This is an error!"))
-#&gt; [1] 10
+#> [1] 10
 ```
 ]
 
@@ -276,19 +251,18 @@ Default arguments can be defined in terms of
 ---
 # Missing arguments
 you can use `missing()` to see if the argument's value comes from the user or defualt
-
-```r
-h06 &lt;- function(x = 10) {
+```{r eval=FALSE}
+h06 <- function(x = 10) {
   list(missing(x), x)
 }
 str(h06())
-&gt; List of 2
-&gt;  $ : logi TRUE
-&gt;  $ : num 10
+> List of 2
+>  $ : logi TRUE
+>  $ : num 10
 str(h06(10))
-#&gt; List of 2
-#&gt;  $ : logi FALSE
-#&gt;  $ : num 10
+#> List of 2
+#>  $ : logi FALSE
+#>  $ : num 10
 ```
 
 .footnote[Lazy evaluation]
@@ -301,12 +275,12 @@ second example uses user supplied so logi is FALSE
 - function can take any number of named and unnamed arguments
 - Pass arbitrary no. of functions to your function
 
-
-```r
-red.plot &lt;- function(x, y, ...) {
+```{r eval=FALSE}
+red.plot <- function(x, y, ...) {
   plot(x, y, col="red", ...)
 }
 red.plot(1:10, 1:10, xlab="My x axis", ylab="My y axis")
+
 ```
 
 .footnote[Lazy evaluation. Example from https://nicercode.github.io/guides/functions/]
@@ -317,25 +291,23 @@ class: middle, center
 functions exit in two ways, they either return a value, indicating success, or they throw an error
 ---
 # Implicit vs explicit return
-
-```r
-j01 &lt;- function(x) {
-  if (x &lt; 10) {
+```{r eval=FALSE}
+j01 <- function(x) {
+  if (x < 10) {
     0
   } else {
     10
   }
 }
 j01(5)
-#&gt; [1] 0
+#> [1] 0
 j01(15)
-#&gt; [1] 10
+#> [1] 10
 ```
 
-
-```r
-j02 &lt;- function(x) {
-  if (x &lt; 10) {
+```{r eval=FALSE}
+j02 <- function(x) {
+  if (x < 10) {
     return(0)
   } else {
     return(10)
@@ -346,21 +318,19 @@ j02 &lt;- function(x) {
 .footnote[Exiting a function]
 ---
 # Invisible values
-- The most common function that returns invisibly is `&lt;-`
+- The most common function that returns invisibly is `<-`
 - Can make invisible by applying `invisible()` to the last value
-
-```r
-j04 &lt;- function() invisible(1)
+```{r eval=FALSE}
+j04 <- function() invisible(1)
 j04()
 ```
 
-
-```r
+```{r eval=FALSE}
 print(j04())
-#&gt; [1] 1
+#> [1] 1
 
 (j04())
-#&gt; [1] 1
+#> [1] 1
 ```
 
 .footnote[Exiting a function]
@@ -368,22 +338,20 @@ print(j04())
 # Errors
 If a function cannot complete its assigned task, it should throw an error with `stop()` indicating the termination of function execution
 
-
-```r
-j05 &lt;- function() {
+```{r eval=FALSE}
+j05 <- function() {
   stop("I'm an error")
   return(10)
 }
 j05()
-#&gt; Error in j05(): I'm an error
+#> Error in j05(): I'm an error
 ```
 .footnote[Exiting a function]
 ---
 # Exit handlers
 Undo any changes made to the global environment
-
-```r
-j06 &lt;- function(x) {
+```{r eval=FALSE}
+j06 <- function(x) {
   cat("Hello\n")
   on.exit(cat("Goodbye!\n"), add = TRUE)
   if (x) {
@@ -393,13 +361,13 @@ j06 &lt;- function(x) {
   }
 }
 j06(TRUE)
-&gt; Hello
-&gt; Goodbye!
-&gt; [1] 10
+> Hello
+> Goodbye!
+> [1] 10
 j06(FALSE)
-&gt; Hello
-&gt; Error in j06(FALSE): Error
-&gt; Goodbye!
+> Hello
+> Error in j06(FALSE): Error
+> Goodbye!
 ```
 
 .footnote[Exiting a function]
@@ -416,15 +384,14 @@ class: middle, center
 
 - Function name comes before the arguments eg. `foofy(a, b, c)`
 
-`\(\checkmark\)` Helps better understand the structure of the language
+$\checkmark$ Helps better understand the structure of the language
 
-
-```r
+```{r eval=FALSE}
 x + y
 `+`(x, y)
 
-names(df) &lt;- c("x", "y", "z")
-`names&lt;-`(df, c("x", "y", "z")) 
+names(df) <- c("x", "y", "z")
+`names<-`(df, c("x", "y", "z")) 
 
 for(i in 1:10) print(i)
 `for`(i, 1:10, print(i))
@@ -437,23 +404,21 @@ for(i in 1:10) print(i)
 - By name, like help(topic = mean)
 !!! Use positional matching only for the first one or two arguments. Avoid using positional matching for less commonly used arguments, and **never use partial matching**.!!!
 
-
-```r
-add &lt;- function(x, y) x + y
+```{r eval=FALSE}
+add <- function(x, y) x + y
 lapply(list(1:3, 4:5), add, 3)
-&gt; [[1]]
-&gt; [1] 4 5 6
-&gt; [[2]]
-&gt; [1] 7 8
+> [[1]]
+> [1] 4 5 6
+> [[2]]
+> [1] 7 8
 ```
 
-
-```r
+```{r eval=FALSE}
 lapply(list(1:3, 4:5), `+`, 3)
-&gt; [[1]]
-&gt; [1] 4 5 6
-&gt; [[2]]
-&gt; [1] 7 8
+> [[1]]
+> [1] 4 5 6
+> [[2]]
+> [1] 7 8
 ```
 
 .footnote[Function forms]
@@ -464,19 +429,19 @@ Use positional matching only for the first one or two arguments; they will be th
 - the function name comes in between its arguments, like `x + y`
 - User defined functions begin with `%`
 
-
-```r
-`%+%` &lt;- function(a, b) paste0(a, b)
+```{r eval=FALSE}
+`%+%` <- function(a, b) paste0(a, b)
 "new " %+% "string"
-#&gt; [1] "new string"
+#> [1] "new string"
+
 ```
 
 .footnote[Function forms]
 
 ---
 # Replacement
-- Functions that replace values by assignment, like `names(df) &lt;- c("a", "b", "c")`
-- They have the special name `xxx&lt;-`, must have arguments named `x` and value, and must return the modified object
+- Functions that replace values by assignment, like `names(df) <- c("a", "b", "c")`
+- They have the special name `xxx<-`, must have arguments named `x` and value, and must return the modified object
 
 .footnote[Function forms]
 ---
@@ -486,10 +451,9 @@ Use positional matching only for the first one or two arguments; they will be th
   - ?( is a syntax error; ?`(` will give you the documentation for parentheses.
 - All special forms are implemented as primitive functions; this means printing these functions is not informative:
 
-
-```r
+```{r eval=FALSE}
 `for`
-&gt; .Primitive("for")
+> .Primitive("for")
 ```
 
 .footnote[Function forms]
@@ -497,105 +461,3 @@ Use positional matching only for the first one or two arguments; they will be th
 class: middle, center
 #Thank you
 .footnote[kmeena@uw.edu, twitter: @envhealthspeak]
-    </textarea>
-<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
-<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-<script>var slideshow = remark.create();
-if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
-  window.dispatchEvent(new Event('resize'));
-});
-(function(d) {
-  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
-  if (!r) return;
-  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
-  d.head.appendChild(s);
-})(document);
-
-(function(d) {
-  var el = d.getElementsByClassName("remark-slides-area");
-  if (!el) return;
-  var slide, slides = slideshow.getSlides(), els = el[0].children;
-  for (var i = 1; i < slides.length; i++) {
-    slide = slides[i];
-    if (slide.properties.continued === "true" || slide.properties.count === "false") {
-      els[i - 1].className += ' has-continuation';
-    }
-  }
-  var s = d.createElement("style");
-  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
-  d.head.appendChild(s);
-})(document);
-// delete the temporary CSS (for displaying all slides initially) when the user
-// starts to view slides
-(function() {
-  var deleted = false;
-  slideshow.on('beforeShowSlide', function(slide) {
-    if (deleted) return;
-    var sheets = document.styleSheets, node;
-    for (var i = 0; i < sheets.length; i++) {
-      node = sheets[i].ownerNode;
-      if (node.dataset["target"] !== "print-only") continue;
-      node.parentNode.removeChild(node);
-    }
-    deleted = true;
-  });
-})();
-(function() {
-  "use strict"
-  // Replace <script> tags in slides area to make them executable
-  var scripts = document.querySelectorAll(
-    '.remark-slides-area .remark-slide-container script'
-  );
-  if (!scripts.length) return;
-  for (var i = 0; i < scripts.length; i++) {
-    var s = document.createElement('script');
-    var code = document.createTextNode(scripts[i].textContent);
-    s.appendChild(code);
-    var scriptAttrs = scripts[i].attributes;
-    for (var j = 0; j < scriptAttrs.length; j++) {
-      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
-    }
-    scripts[i].parentElement.replaceChild(s, scripts[i]);
-  }
-})();
-(function() {
-  var links = document.getElementsByTagName('a');
-  for (var i = 0; i < links.length; i++) {
-    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
-      links[i].target = '_blank';
-    }
-  }
-})();</script>
-
-<script>
-slideshow._releaseMath = function(el) {
-  var i, text, code, codes = el.getElementsByTagName('code');
-  for (i = 0; i < codes.length;) {
-    code = codes[i];
-    if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
-      text = code.textContent;
-      if (/^\\\((.|\s)+\\\)$/.test(text) || /^\\\[(.|\s)+\\\]$/.test(text) ||
-          /^\$\$(.|\s)+\$\$$/.test(text) ||
-          /^\\begin\{([^}]+)\}(.|\s)+\\end\{[^}]+\}$/.test(text)) {
-        code.outerHTML = code.innerHTML;  // remove <code></code>
-        continue;
-      }
-    }
-    i++;
-  }
-};
-slideshow._releaseMath(document);
-</script>
-<!-- dynamically load mathjax for compatibility with self-contained -->
-<script>
-(function () {
-  var script = document.createElement('script');
-  script.type = 'text/javascript';
-  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
-  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
-    script.src  = script.src.replace(/^https?:/, '');
-  document.getElementsByTagName('head')[0].appendChild(script);
-})();
-</script>
-  </body>
-</html>
